Implementação do dockerfile